--- a/projects/postgresql/src/main/resources/application.properties
+++ b/projects/postgresql/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/study
 spring.datasource.username=testuser
-spring.datasource.password=
+spring.datasource.password=test
