간단 게시판 작성 완료

--- a/projects/postgresql/src/main/resources/application.properties
+++ b/projects/postgresql/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/study
 spring.datasource.username=testuser
 spring.datasource.password=test
+spring.mvc.hiddenmethod.filter.enabled=true
