자주 사용하는 리눅스 기본 명령어 모음

--- a/projects/postgresql/src/main/resources/application.properties
+++ b/projects/postgresql/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/study
-spring.datasource.username=testuser
-spring.datasource.password=test
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=shane
+spring.datasource.password=java
 spring.mvc.hiddenmethod.filter.enabled=true
