vueJs 게시판 작성중 + 포스팅 작성중

--- a/projects/vuejs/src/main/resources/application.properties
+++ b/projects/vuejs/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=shane
 spring.datasource.password=java
+spring.mvc.hiddenmethod.filter.enabled=true
+spring.sql.init.encoding=UTF-8
