SpringBoot 프로젝트에서 HTML, CSS 등 정적자원 Hot Reload 시키기 - IntelliJ IDEA 인텔리제이

--- a/projects/vuejs/src/main/resources/application.properties
+++ b/projects/vuejs/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=shane
 spring.datasource.password=java
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.sql.init.encoding=UTF-8
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
