나만의 라이브러리 만들고 jitPack통해 Maven/Gradle 배포해 사용하기

--- a/projects/vuejs/pom.xml
+++ b/projects/vuejs/pom.xml
@@ -17,7 +17,18 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+	<repositories>
+		<repository>
+		    <id>jitpack.io</id>
+		    <url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 	<dependencies>
+		<dependency>
+		    <groupId>com.github.Shane-Park</groupId>
+		    <artifactId>shaneutils</artifactId>
+		    <version>f1e2f92941</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
