--- a/projects/java/build.gradle
+++ b/projects/java/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.apache.commons:commons-text:1.9'
     // https://mvnrepository.com/artifact/com.opencsv/opencsv
     implementation group: 'com.opencsv', name: 'opencsv', version: '5.5.2'
+    implementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
