--- a/projects/java/build.gradle
+++ b/projects/java/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation 'org.apache.commons:commons-text:1.9'
     implementation group: 'com.opencsv', name: 'opencsv', version: '5.5.2'
     implementation 'org.springframework.boot:spring-boot-starter-test'
-    compileOnly 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
