ULID sequence guarantee test

--- a/projects/java/build.gradle
+++ b/projects/java/build.gradle
@@ -19,15 +19,22 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.apache.commons:commons-text:1.9'
-    implementation group: 'com.opencsv', name: 'opencsv', version: '5.5.2'
-    implementation 'org.springframework.boot:spring-boot-starter-test'
+    // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // Spring Boot
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // Utils
+    implementation 'org.apache.commons:commons-text:1.9'
+    implementation group: 'com.opencsv', name: 'opencsv', version: '5.5.2'
+    implementation 'com.github.f4b6a3:ulid-creator:5.2.3'
+
 }
 
 test {
